# capsule

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README  README.md  TODO  build.src  code.cap  code.src  generate-grammer.sh  main.cc
.github/workflows/: CI.yml  RELEASE.yml  build-and-release.yml  cmake.yml
benchmark/: equality.src  fib.src
bolt/: mod.src
compiler/: compiler.hh
examples/: client.src  server.src  snake_game.src
graph/: graph.hh
include/: capsule.h  srclang.h
interpreter/: interpreter.hh
lang/: ast.hh  code.hh  lexer.hh  parser.hh
lang/tests/: CMakeLists.txt  lexer_test.cc
llvm/: compiler.hh
modules/: CMakeLists.txt  _termios.cpp  app.src  ffi.src  fib.cap  file.src  graphics.src  math.cpp  os.cpp  os.src  path.src  std.src  string.src  strings.cpp  strings.src  sys.cpp  sys.src  termios.src
scripts/: generate-runtime.sh
src/: Builtin.cpp  Builtin.cxx  Builtin.h  Builtin.hxx  ByteCode.cpp  ByteCode.cxx  ByteCode.h  ByteCode.hxx  CMakeLists.txt  Compiler.cpp  Compiler.cxx  Compiler.h  Compiler.hxx  DebugInfo.cxx  DebugInfo.h  DebugInfo.hxx  Function.cpp  Function.cxx  Function.h  Function.hxx  Instructions.cxx  Instructions.h  Instructions.hxx  Interpreter.cpp  Interpreter.cxx  Interpreter.h  Interpreter.hxx  Language.cxx  Language.hxx  MemoryManager.cpp  MemoryManager.cxx  MemoryManager.h  MemoryManager.hxx  Options.cxx  Options.hxx  ProjectManager.cxx  ProjectManager.hxx  SymbolTable.cpp  SymbolTable.cxx  SymbolTable.h  (+24 more)
src/Builtins/: Builtin.cpp  Builtin.cxx  Builtin.h  Builtin.hxx
src/ByteCode/: ByteCode.cpp  ByteCode.cxx  ByteCode.h  DebugInfo.h  Instructions.cpp  Instructions.h
src/Compiler/: Compiler.cpp  Compiler.cxx  Compiler.h  Compiler.hxx
src/Compiler/SymbolTable/: SymbolTable.cpp  SymbolTable.h
src/Interpreter/: Interpreter.cpp  Interpreter.cxx  Interpreter.h  Interpreter.hxx
src/Interpreter/Builtins/: Builtin.cxx  Builtin.hxx
src/Interpreter/MemoryManager/: MemoryManager.cpp  MemoryManager.h
src/Language/: Language.cpp  Language.cxx  Language.h  Language.hxx  Options.cpp  Options.h
src/Value/: Function.cpp  Function.h  Value.cpp  Value.cxx  Value.h  Value.hxx
tests/: 0002-precedence.src  0003-assignment-associativity.src  0004-assignment-global.src  0005-assign-grouping.src  0005-assign-grouping.src.err  0006-assignment-infix-operator.src  0006-assignment-infix-operator.src.err  0007-assignment-prefix-operator.src  0007-assignment-prefix-operator.src.err  0008-assignment-undefined.src  0008-assignment-undefined.src.err  0009-block-empty.src  0010-bool-equality.src  0011-bool-not.src  0012-call-bool.src.err  0013-call-null.src  0013-call-null.src.err  0014-call-number.src  0014-call-number.src.err  0015-call-string.src  0015-call-string.src.err  0016-closure-close-over.src  0017-closure-close-over-later-variable.src  0018-closure-close-over-method-parameter.src  0019-closure-closed-in-function.src  0019-closure-closed-in-function.src.err  0020-closure-nested.src  0021-closure-open-in-function.src  0022-closure-reference-multiple-times.src  0023-closure-resuse-slot.src  0024-closure-shadow-with-local.src  0024-closure-shadow-with-local.src.err  0025-expression-evaluate.src  0025-expression-evaluate.src.err  0026-property-function.src  0027-property-call-non-callable.src  0027-property-call-non-callable.src.err  0028-property-get-set.src  0029-property-get-bool.src.err  0030-property-get-function.src  (+107 more)
